--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -2,7 +2,9 @@
 	--container-width: 1440px;
 	--container-padding: 15px;
 
-	--section-padding-top: 100px;
+	--section-padding-top: 90px;
+	--section-padding-top-mobile: 60px;
+
 
 	--font-main: 'Roboto', sans-serif;
 	--font-accent: 'Montserrat', sans-serif;
