--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -9,11 +9,20 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    align-items: center;
+    // align-items: center;
 
     @include mobile {
-     padding: 5px 0;   
+    //  padding: 20px;   
     }
+
+    @small-mobile{
+        padding: 10px;   
+    }
+
+   @include small-mobile{
+    min-width: 300px;
+    padding: 5px;
+   }
 }
 
 .form::after{
@@ -43,6 +52,10 @@
     font-size: 16px;
     transition: border-color 0.3s ease-in-out;
     resize: none;
+
+    @include small-mobile{
+        font-size: 14px;
+    }
 }
 
 .form input:focus, textarea:focus {
@@ -53,6 +66,7 @@
   .form-group {
     position: relative;
     width: 90%;    
+ 
     @include mobile {
         margin-bottom: 10px;
     }
@@ -142,7 +156,7 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
-        margin-top: 55px;
+        // margin-top: 55px;
         padding: 0;
         gap: 10px;
     }
@@ -150,6 +164,9 @@
  
 .g-recaptcha{
    width: 50%;
+   @include mobile {
+         width: 100%;
+   }
 }
 
 .form__button{
