--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding-top: 70px;
+    padding-top: 10px;
     color: #fff;              
     margin-top: 50px;
     
@@ -38,7 +38,6 @@
         text-align: center;
         padding-left: 0;
     }
-
 }
 
 .about__title-small{
@@ -72,6 +71,7 @@
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
+    margin-top: 20px;
     margin-bottom: 20px;
     z-index: 1;
     color: #000;
