--- a/src/scss/blocks/_feedbacks.scss
+++ b/src/scss/blocks/_feedbacks.scss
@@ -1,8 +1,13 @@
 .feedbacks {
     padding-top: var(--section-padding-top);
+
+    @include mobile {
+        padding-top: var(--section-padding-top-mobile);
+    }
 }
 .feedbacks__slaider {
     padding-top: var(--section-padding-top);
-}
-.feedbacks__swiper {
+    @include mobile {
+        padding-top: var(--section-padding-top-mobile);
+    }
 }
