--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -2,7 +2,11 @@
 	position: relative;
 	padding: 25px 10px;
 	background-color: #000;
-	margin-top: var(--section-padding-top);	
+	margin-top: var(--section-padding-top);
+	
+	@include small-mobile{
+		padding: 10px 5px;
+	}
 }
 
 .footer__row {
@@ -20,7 +24,12 @@
 .footer__left-side p{
 	font-size: 24px;
 	line-height: 1.5;
+
+	@include small-mobile{
+		font-size: 16px;
+	}	
 }
+
 
 .footer__data a{
 	font-size: 20px;
@@ -30,10 +39,13 @@
 	&:hover{
 		color: var(--accent);
 	}
+	@include small-mobile{
+		font-size: 14px;		
+	}
 }
 
 .footer__copyright {
-	margin-top: 47px;
+	margin-top: 88px;
 	padding: 10px 0;
 	font-size: 20px;
 	
@@ -41,6 +53,12 @@
 		margin-top: 15px;
 		font-size: 14px;
 	}
+
+	@include small-mobile{
+		font-size: 12px;
+		margin-top: 10px;
+	}
+
 }
 
 .footer__right-side{
