--- a/src/scss/blocks/_table.scss
+++ b/src/scss/blocks/_table.scss
@@ -1,13 +1,21 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
-   
+    margin-top: 20px; 
+    
+    @include small-mobile{
+        font-size: 14px;
+    }
 }
+
 th, td {
     border: 1px solid #ddd;
     padding: 10px;
     text-align: left;
+
+    @include small-mobile{
+        padding: 4px;
+    }
 }
 td.table__product-name{
     font-weight: 600;
