--- a/src/scss/blocks/_video.scss
+++ b/src/scss/blocks/_video.scss
@@ -1,5 +1,8 @@
 .video {
     padding-top: var(--section-padding-top);
+    @include mobile {
+        padding-top: var(--section-padding-top-mobile);
+    }
 }
 .video__wrapper{
     display: flex;
