--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -27,6 +27,7 @@
 	--small-mobile-size:374px;
 
 	--swiper-pagination-top: 400px;
+	--swiper-pagination-top-mobile: 390px;
 	--swiper-theme-color: var(--accent) !important;
 }
 
