--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -155,6 +155,11 @@
         text-align: center;  
         padding: 20px;
     }
+
+    @include small-mobile{
+        font-size: 1.2rem;
+        padding: 10px; 
+    }
  }
 
  
