--- a/src/scss/blocks/_feedbacks-swiper.scss
+++ b/src/scss/blocks/_feedbacks-swiper.scss
@@ -4,6 +4,10 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   background-color: var(--accent-2);
   border: 5px solid var(--accent-2);
+ 
+  @include small-mobile{
+        max-width: 100%;
+  }
 }
 
 .swiper-container {
@@ -22,8 +26,13 @@
   
   @include mobile {
       max-height: 350px;
+
   }
 
+  @include small-mobile{
+    padding-top: 0; 
+    padding-bottom: 0;
+  }
 }
 
 .swiper-slide.feedbacks-slide{
@@ -33,10 +42,16 @@
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    
 
     @include mobile {
         flex-direction: column;
-        gap: 10px;    
+        gap: 10px;
+        left: -40px;        
+    }
+
+    @include small-mobile{
+       padding: 5px;
     }
 }
 
@@ -44,10 +59,11 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    
+    padding: 12px;
+
     @include mobile {
         flex-direction:column;
-        gap: 20px;
+        gap: 20px;        
     }
 }
 
@@ -59,14 +75,14 @@
     text-align: center;
     width: 250px; /* Фиксированная ширина */
     flex-shrink: 0; /* Не уменьшается */
-    // background-color: var(--accent);
     border-radius: 10px;
 
     @include mobile {
         width: 100%;
         justify-content: space-around;
         align-items: center;
-    }
+        padding: 0;
+    }    
 }
 
 .feedbacks-slide__img {
@@ -79,6 +95,11 @@
         width: 70px;
         height: 70px;
     }
+
+    @include small-mobile{
+        width: 50px;
+        height: 50px;
+    }
 }
 
 .feedbacks-slide__name {
@@ -89,6 +110,10 @@
     @include mobile {
         margin-top: 0;
     }
+
+    @include small-mobile{
+        font-size: 16px;
+    }
 }
 
 .feedbacks-slide__position {
@@ -96,6 +121,15 @@
     color: #000;
     margin-top: 5px;
     flex-wrap: wrap;
+
+    @include small-mobile{
+        font-size: 14px;
+    }
+}
+.feedbacks__text{
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .feedbacks-slide__text {
@@ -111,17 +145,31 @@
     
     @include mobile {
         font-size: 16px;
+        max-width: 100%;
+        height: 170px;
+        padding-top: 0;
+    }
+
+    @include small-mobile{
+        font-size: 14px;
+        padding: 10px; 
+             
+
     }
 }
 
 .swiper__btns{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 
     @include mobile {
-        flex-direction: row;
-        gap: 10px;
+        flex-direction: row-reverse;
+        gap: 10px;    
+    }
+
+    @include small-mobile{
+        gap: 20px;     
     }
 }
 
@@ -143,16 +191,24 @@
     @include mobile {        
         width: 50px;
         height: 50px;
-
     }
-
+    @include small-mobile {        
+        width: 40px;
+        height: 40px;
+    }
 }
 
 .swiper-pagination {
-    top: var(--swiper-pagination-top);
+    top: var(--swiper-pagination-top); 
+    
+
     @include mobile {
+        top: var(--swiper-pagination-top-mobile) !important;   
+    }    
+    
+    @include small-mobile {
         display: none;
-    }
+    }    
 }
 
 
