--- a/src/html/blocks/templates/table.html
+++ b/src/html/blocks/templates/table.html
@@ -1,26 +1,27 @@
-  <table>
+    <table>
         <tr>
-            <th>Продукт</th>
-            <th>Количество устройств</th>
-            <th>Оплата за месяц</th>
-            <th>Оплата за год</th>
+            <th data-key="table-product">Продукт</th>
+            <th data-key="table-device-count">Количество устройств</th>
+            <th data-key="table-monthly-payment">Оплата за месяц</th>
+            <th data-key="table-annual-payment">Оплата за год</th>
         </tr>
         <tr>
-            <td class="table__product-name">Worry Free Services</td>
-            <td>1-25</td>
-            <td>7.10 €</td>
-            <td>6.0 €</td>
+            <td class="table__product-name" data-key="product-worry-free">Worry Free Services</td>
+            <td data-key="devices-1-25">1-25</td>
+            <td data-key="monthly-payment-1">7.10 €</td>
+            <td data-key="annual-payment-1">6.0 €</td>
         </tr>
         <tr>
-            <td class="table__product-name">Worry Free Services</td>
-            <td>26-50</td>
-            <td>5.10 €</td>
-            <td>4.90 €</td>
+            <td class="table__product-name" data-key="product-worry-free">Worry Free Services</td>
+            <td data-key="devices-26-50">26-50</td>
+            <td data-key="monthly-payment-2">5.10 €</td>
+            <td data-key="annual-payment-2">4.90 €</td>
         </tr>
         <tr>
-            <td class="table__product-name">Worry Free Services</td>
-            <td>51-100</td>
-            <td>4.50 €</td>
-            <td>4.30 €</td>
+            <td class="table__product-name" data-key="product-worry-free">Worry Free Services</td>
+            <td data-key="devices-51-100">51-100</td>
+            <td data-key="monthly-payment-3">4.50 €</td>
+            <td data-key="annual-payment-3">4.30 €</td>
         </tr>
     </table>
+    
