--- a/src/scss/blocks/_icons.scss
+++ b/src/scss/blocks/_icons.scss
@@ -22,9 +22,11 @@
 	height: 100px;
 }
 
-.icon--whatsapp, .icon--telegram {
+.icon--facebook, .icon--instagram {
 	width: 25px;
 	height: 25px;
+	fill: var(--accent);
+	/* stroke: var(--accent-2); */
 	transition: all 0.2s ease-in;
 	margin-right: 10px;
 
