--- a/src/scss/blocks/_icons.scss
+++ b/src/scss/blocks/_icons.scss
@@ -22,6 +22,11 @@
 	height: 100px;
 }
 
+.icon--avatar_female, .icon--avatar_male{
+	width: 200px;
+	height: 160px;
+}
+
 .icon--facebook, .icon--instagram {
 	width: 25px;
 	height: 25px;
