--- a/src/html/blocks/templates/feedbacks-slide.html
+++ b/src/html/blocks/templates/feedbacks-slide.html
@@ -1,8 +1,10 @@
 <div class="swiper-slide feedbacks-slide">
     <div class="feedbacks__person">
         <img class="feedbacks-slide__img" src="./img/feedbacks/@@img.jpg" alt="Person">
-        <div class="feedbacks-slide__name">@@name</div>
-        <div class="feedbacks-slide__position">@@position</div>
+        <div class="feedbacks-slide__desc">
+            <div class="feedbacks-slide__name">@@name</div>
+            <div class="feedbacks-slide__position">@@position</div>
+        </div>
     </div>
     <div class="feedbacks__text">
         <div class="feedbacks-slide__text">@@text</div>
