--- a/src/html/blocks/templates/feedbacks-swiper.html
+++ b/src/html/blocks/templates/feedbacks-swiper.html
@@ -84,8 +84,10 @@
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_male"></use>
           </svg>
         </div>
-        <div class="feedbacks-slide__name" data-key="feedback-name-1">Bob</div>
-        <div class="feedbacks-slide__position" data-key="feedback-position-1">Cleaner</div>
+          <div class="feedbacks-slide__desc">
+            <div class="feedbacks-slide__name" data-key="feedback-name-1">Bob</div>
+            <div class="feedbacks-slide__position" data-key="feedback-position-1">Cleaner</div>
+          </div>
       </div>
       <div class="feedbacks__text">
         <div class="feedbacks-slide__text" data-key="feedback-text-1">All is great!</div>
@@ -98,8 +100,10 @@
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_male"></use>
           </svg>
         </div>
-        <div class="feedbacks-slide__name" data-key="feedback-name-2">Alice</div>
-        <div class="feedbacks-slide__position" data-key="feedback-position-2">Manager</div>
+        <div class="feedbacks-slide__desc">
+          <div class="feedbacks-slide__name" data-key="feedback-name-2">Alice</div>
+          <div class="feedbacks-slide__position" data-key="feedback-position-2">Manager</div>
+        </div>
       </div>
       <div class="feedbacks__text">
         <div class="feedbacks-slide__text" data-key="feedback-text-2">Excellent service!</div>
@@ -112,8 +116,10 @@
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_male"></use>
           </svg>
         </div>
-        <div class="feedbacks-slide__name" data-key="feedback-name-3"></div>
-        <div class="feedbacks-slide__position" data-key="feedback-position-3"></div>
+        <div class="feedbacks-slide__desc">
+          <div class="feedbacks-slide__name" data-key="feedback-name-3"></div>
+          <div class="feedbacks-slide__position" data-key="feedback-position-3"></div>
+        </div>
       </div>
       <div class="feedbacks__text">
         <div class="feedbacks-slide__text" data-key="feedback-text-3"></div>
@@ -126,8 +132,10 @@
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_female"></use>
           </svg>
         </div>
-        <div class="feedbacks-slide__name" data-key="feedback-name-4"></div>
-        <div class="feedbacks-slide__position" data-key="feedback-position-4"></div>
+        <div class="feedbacks-slide__desc">
+          <div class="feedbacks-slide__name" data-key="feedback-name-4"></div>
+          <div class="feedbacks-slide__position" data-key="feedback-position-4"></div>
+        </div>
       </div>
       <div class="feedbacks__text">
         <div class="feedbacks-slide__text" data-key="feedback-text-4"></div>
@@ -140,8 +148,10 @@
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_female"></use>
           </svg>
         </div>
-        <div class="feedbacks-slide__name" data-key="feedback-name-5">алоиткпо</div>
-        <div class="feedbacks-slide__position" data-key="feedback-position-5">ипколтик</div>
+        <div class="feedbacks-slide__desc">
+          <div class="feedbacks-slide__name" data-key="feedback-name-5">алоиткпо</div>
+          <div class="feedbacks-slide__position" data-key="feedback-position-5">ипколтик</div>
+        </div>
       </div>
       <div class="feedbacks__text">
         <div class="feedbacks-slide__text" data-key="feedback-text-5">4еи</div>
