--- a/src/scss/blocks/_feedbacks-swiper.scss
+++ b/src/scss/blocks/_feedbacks-swiper.scss
@@ -70,7 +70,7 @@
 .feedbacks__person {
     display: flex;
     flex-direction: column;
-    padding:30px  20px;
+    padding: 30px  20px;
     align-items: center;
     text-align: center;
     width: 250px; /* Фиксированная ширина */
@@ -78,11 +78,24 @@
     border-radius: 10px;
 
     @include mobile {
+        flex-direction: row;
         width: 100%;
         justify-content: space-around;
-        align-items: center;
-        padding: 0;
-    }    
+        gap: 15px;
+        }
+    @include small-mobile{
+        padding: 20px 10px 10px 10px;
+        gap: 10px;
+    }
+}
+.feedbacks-slide__desc{
+
+    @include mobile{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        
+    }
 }
 
 .feedbacks-slide__img {
@@ -130,6 +143,8 @@
     @include mobile {
         width: 100%;
     }
+
+    
 }
 
 .feedbacks-slide__text {
@@ -201,7 +216,6 @@
 .swiper-pagination {
     top: var(--swiper-pagination-top); 
     
-
     @include mobile {
         top: var(--swiper-pagination-top-mobile) !important;   
     }    
