--- a/src/html/blocks/templates/feedbacks-swiper.html
+++ b/src/html/blocks/templates/feedbacks-swiper.html
@@ -79,7 +79,7 @@
   <div class="swiper-wrapper">
     <div class="swiper-slide feedbacks-slide">
       <div class="feedbacks__person">
-        <div class="feedbacks-slide__img" alt="Person">
+        <div class="feedbacks-slide__img">
           <svg class="icon icon--avatar_male">
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_male"></use>
           </svg>
@@ -95,7 +95,7 @@
     </div>
     <div class="swiper-slide feedbacks-slide">
       <div class="feedbacks__person">
-        <div class="feedbacks-slide__img" alt="Person">
+        <div class="feedbacks-slide__img">
           <svg class="icon icon--avatar_male">
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_male"></use>
           </svg>
@@ -111,7 +111,7 @@
     </div>
     <div class="swiper-slide feedbacks-slide">
       <div class="feedbacks__person">
-        <div class="feedbacks-slide__img" alt="Person">
+        <div class="feedbacks-slide__img">
           <svg class="icon icon--avatar_male">
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_male"></use>
           </svg>
@@ -127,7 +127,7 @@
     </div>    
     <div class="swiper-slide feedbacks-slide">
       <div class="feedbacks__person">
-        <div class="feedbacks-slide__img" alt="Person">
+        <div class="feedbacks-slide__img">
           <svg class="icon icon--avatar_female">
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_female"></use>
           </svg>
@@ -143,7 +143,7 @@
     </div>    
     <div class="swiper-slide feedbacks-slide">
       <div class="feedbacks__person">
-        <div class="feedbacks-slide__img" alt="Person">
+        <div class="feedbacks-slide__img">
           <svg class="icon icon--avatar_female">
             <use href="./img/svgsprite/stack/svg/sprite.stack.svg#avatar_female"></use>
           </svg>
